--- a/Quize/View/EntryView.xib
+++ b/Quize/View/EntryView.xib
@@ -18,33 +18,40 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Let's Play Quize!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9v-n0-czM">
-                    <rect key="frame" x="96" y="109" width="188" height="151"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="hello" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hTM-8e-fpo">
-                    <rect key="frame" x="98" y="355" width="219" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zEk-TU-yyX">
-                    <rect key="frame" x="93" y="541" width="228" height="121"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemYellowColor"/>
-                    <state key="normal" title="Let's start Quize">
-                        <color key="titleColor" systemColor="secondarySystemGroupedBackgroundColor"/>
-                    </state>
-                    <connections>
-                        <action selector="toMainViewButton:" destination="-1" eventType="touchUpInside" id="x0m-da-9Dt"/>
-                    </connections>
-                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="SaL-cD-mag">
+                    <rect key="frame" x="16" y="351" width="382" height="194"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's Play Quize!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9v-n0-czM">
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="hello" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hTM-8e-fpo">
+                            <rect key="frame" x="0.0" y="80" width="382" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zEk-TU-yyX">
+                            <rect key="frame" x="0.0" y="164" width="382" height="30"/>
+                            <color key="backgroundColor" systemColor="systemYellowColor"/>
+                            <state key="normal" title="Let's start Quize">
+                                <color key="titleColor" systemColor="secondarySystemGroupedBackgroundColor"/>
+                            </state>
+                            <connections>
+                                <action selector="toMainViewButton:" destination="-1" eventType="touchUpInside" id="x0m-da-9Dt"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemGray2Color"/>
+            <constraints>
+                <constraint firstItem="SaL-cD-mag" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="V7m-9f-A2K"/>
+                <constraint firstItem="SaL-cD-mag" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Ysr-ZY-Oth"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="SaL-cD-mag" secondAttribute="trailing" constant="16" id="ZS9-tk-Dvh"/>
+            </constraints>
             <point key="canvasLocation" x="147.82608695652175" y="-150"/>
         </view>
     </objects>
