--- a/Quize/View/MainView.xib
+++ b/Quize/View/MainView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,75 +11,43 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainView" customModule="Quize" customModuleProvider="target">
             <connections>
                 <outlet property="helloLabel" destination="cRA-zi-Zui" id="3HK-oO-kNX"/>
-                <outletCollection property="buttons" destination="xn2-CO-NfV" collectionClass="NSMutableArray" id="w0h-sb-isD"/>
-                <outletCollection property="buttons" destination="3eG-nB-hd0" collectionClass="NSMutableArray" id="Ryc-dg-3RA"/>
-                <outletCollection property="buttons" destination="HgP-aZ-H2u" collectionClass="NSMutableArray" id="TOF-8K-Pew"/>
+                <outlet property="myTableView" destination="7WF-1z-OST" id="iPy-My-KcG"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eG-nB-hd0">
-                    <rect key="frame" x="57" y="356" width="275" height="64"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                    <state key="normal" title="Знание Английского - средний">
-                        <color key="titleColor" systemColor="systemPurpleColor"/>
-                    </state>
-                    <connections>
-                        <action selector="toPaulseViewButton:" destination="-1" eventType="touchUpInside" id="cfg-rS-Gjd"/>
-                    </connections>
-                </button>
-                <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HgP-aZ-H2u">
-                    <rect key="frame" x="57" y="476" width="275" height="64"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                    <state key="normal" title="Знание Английского - профи">
-                        <color key="titleColor" systemColor="systemPurpleColor"/>
-                    </state>
-                    <connections>
-                        <action selector="toPaulseViewButton:" destination="-1" eventType="touchUpInside" id="iyB-0D-XA6"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xn2-CO-NfV">
-                    <rect key="frame" x="57" y="228" width="275" height="76"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                    <state key="normal" title="Знание Английского - новичек">
-                        <color key="titleColor" systemColor="systemPurpleColor"/>
-                    </state>
-                    <connections>
-                        <action selector="toPaulseViewButton:" destination="-1" eventType="touchUpInside" id="BjB-Yb-dtM"/>
-                    </connections>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRA-zi-Zui">
-                    <rect key="frame" x="16" y="84" width="382" height="33"/>
+                    <rect key="frame" x="16" y="40" width="288" height="33"/>
                     <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="30"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" sectionIndexMinimumDisplayRowCount="1" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7WF-1z-OST">
+                    <rect key="frame" x="20" y="83" width="280" height="397"/>
+                    <color key="backgroundColor" systemColor="systemGrayColor"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemGrayColor"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="7WF-1z-OST" secondAttribute="trailing" constant="20" id="2pA-sq-eFB"/>
+                <constraint firstItem="7WF-1z-OST" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="7dD-G4-TkV"/>
+                <constraint firstItem="7WF-1z-OST" firstAttribute="top" secondItem="cRA-zi-Zui" secondAttribute="bottom" constant="10" id="F02-6K-dfL"/>
                 <constraint firstItem="cRA-zi-Zui" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="RQk-EC-WWG"/>
                 <constraint firstItem="cRA-zi-Zui" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="dUR-4m-0SM"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="7WF-1z-OST" secondAttribute="bottom" id="nUh-Wv-33D"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cRA-zi-Zui" secondAttribute="trailing" constant="16" id="wcG-Ic-d6f"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="93.75"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
