--- a/Quize/View/PaulseView.xib
+++ b/Quize/View/PaulseView.xib
@@ -10,11 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PaulseView" customModule="Quize" customModuleProvider="target">
             <connections>
+                <outlet property="myCollectionView" destination="Kjv-gW-jHu" id="7Yz-yV-qTr"/>
                 <outlet property="progressView" destination="y6q-Lt-ALJ" id="6Of-NW-lZo"/>
-                <outlet property="titlleLabel" destination="9gt-LV-JPC" id="8Wg-M6-9Dk"/>
-                <outletCollection property="answerButton" destination="Bje-Uk-vKo" collectionClass="NSMutableArray" id="JV4-81-PgG"/>
-                <outletCollection property="answerButton" destination="NNe-aV-7TG" collectionClass="NSMutableArray" id="J4k-5r-Avz"/>
-                <outletCollection property="answerButton" destination="JyF-87-Ws6" collectionClass="NSMutableArray" id="foC-Uq-3wy"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,48 +26,27 @@
                         <constraint firstAttribute="height" constant="30" id="IUF-a4-V3o"/>
                     </constraints>
                 </view>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="gPx-OZ-zji">
-                    <rect key="frame" x="16" y="140" width="288" height="228"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gt-LV-JPC">
-                            <rect key="frame" x="78" y="0.0" width="132.5" height="48"/>
-                            <fontDescription key="fontDescription" name="DiwanMishafi" family="Mishafi" pointSize="33"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bje-Uk-vKo">
-                            <rect key="frame" x="121" y="78" width="46" height="30"/>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="answerDidTap:" destination="-1" eventType="touchUpInside" id="Y9R-Un-tmf"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNe-aV-7TG">
-                            <rect key="frame" x="121" y="138" width="46" height="30"/>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="answerDidTap:" destination="-1" eventType="touchUpInside" id="et1-PX-jDP"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JyF-87-Ws6">
-                            <rect key="frame" x="121" y="198" width="46" height="30"/>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="answerDidTap:" destination="-1" eventType="touchUpInside" id="W8Z-bD-tWy"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                </stackView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Kjv-gW-jHu">
+                    <rect key="frame" x="20" y="140" width="280" height="428"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iNc-M4-Xa1">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="y6q-Lt-ALJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="48Q-kt-cR4"/>
-                <constraint firstItem="gPx-OZ-zji" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="7m7-QX-RLD"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="y6q-Lt-ALJ" secondAttribute="trailing" constant="20" id="Ddl-re-bgL"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="gPx-OZ-zji" secondAttribute="trailing" constant="16" id="KkT-yB-d4p"/>
-                <constraint firstItem="gPx-OZ-zji" firstAttribute="top" secondItem="y6q-Lt-ALJ" secondAttribute="bottom" constant="100" id="L0F-3N-CVZ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Kjv-gW-jHu" secondAttribute="trailing" constant="20" id="S03-dh-jJX"/>
+                <constraint firstItem="Kjv-gW-jHu" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="SeE-1d-hnj"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Kjv-gW-jHu" secondAttribute="bottom" id="rKp-YH-BcR"/>
                 <constraint firstItem="y6q-Lt-ALJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="w2s-ac-LzO"/>
+                <constraint firstItem="Kjv-gW-jHu" firstAttribute="top" secondItem="y6q-Lt-ALJ" secondAttribute="bottom" constant="100" id="xjd-ka-Ane"/>
             </constraints>
             <point key="canvasLocation" x="113.04347826086958" y="23.4375"/>
         </view>
